added members details

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iinventiv",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
